# aspiesolutions-main

./: .babelrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  app-spec.yaml  gulpfile.js  next.config.js  package-lock.json  package.json  relay.config.js  run-frontend-docker-dev.sh  schema.graphql  tsconfig.json
.github/workflows/: dev.yml
.vercel/: project.json
aspiesolutions-core/: Cargo.toml
aspiesolutions_core/: Cargo.toml
aspiesolutions_core/src/: auth0.rs  config.rs  constants.rs  lib.rs  permissions.rs
aspiesolutions_core/src/auth0/: client.rs  mod.rs
aspiesolutions_core/src/constants/: mod.rs  scopes.rs
components/: TransactionListView.tsx  TransactionOverView.tsx  TransactionView.tsx  displayStatesAsTable.js
cypress/component/: TestRelay.cy.ts  TestRelay.cy.tsx  TestTransactionOverView.cy.tsx
entity/: Cargo.toml
entity/src/: access_code.rs  account.rs  group.rs  mod.rs  object.rs  prelude.rs  session.rs  transaction.rs  user.rs  user_group.rs  verification_token.rs
entity/src/financial_planner/: bank_account.rs  bill_amount_due.rs  bill_due_date.rs  bill_payment.rs  bills.rs  mod.rs  transaction.rs
lib/: http.ts  logger.ts  nextAuth.js  prisma.js  rbac.ts  urql.js
lib-db-sea-orm-neon/: package.json
lib-graphql/: Cargo.toml
lib-graphql/src/: access_code.rs  address.rs  lib.rs  node.rs  pageinfo.rs  session.rs  user.rs
lib-neon-graphql/: Cargo.toml  README.md  index.d.ts  package.json  perf.js
lib-neon-graphql/src/: graphql.rs  lib.rs
lib-neon-graphql/src/lib/: graphql.rs
lib/graphql/: index.ts
lib/nextAuth/: adapter.ts  index.js
lib/typeorm/: data-source.ts  index.ts
lib/typeorm/entity/: Account.ts  User.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user.rs  m20220710_115953_create_session.rs  m20220710_122030_create_account.rs  m20220724_163650_create_transaction.rs  m20220725_204232_update_user_add_idp_id.rs  m20220729_123208_create_financial_planner.rs  m20220729_123208_create_financial_planner_bank_account.rs  m20220729_154512_create_financial_planner_bills.rs  main.rs
neon-lib-db-sea-orm/: Cargo.toml  index.d.ts  package.json
neon-lib-db-sea-orm/src/: lib.rs
pages/: _app.js  _app.tsx  _document.tsx  auth.js  gatekeeper.js  gatekeeper.tsx  index.js  states.js
pages/api/: gql-proxy.ts  graphql.ts  state.ts
pages/api/auth/: [...auth0].js  [...nextauth].js
pages/api/graphql/: index.ts  schema.ts
pages/cities/: add.js  index.js
pages/tests/: relay.tsx
prisma/: schema.prisma
rust-graphql-api/: Cargo.toml  Dockerfile  app-spec.yaml
rust-graphql-api/src/: lib.rs  main.rs  routes.rs
rust-lib-db-sea-orm/: Cargo.toml
rust-scripts/do-helper/: Cargo.toml
rust-scripts/do-helper/src/: main.rs
rust-scripts/migrate/: Cargo.toml  README.md
rust-scripts/migrate/src/: main.rs
src/components/: testComponent.tsx
src/lib/: constants.ts  data-source.ts  urql.js
src/lib/graphql/: index.ts  resolvers.ts
src/lib/graphql/models/: AccessCode.ts  Account.ts  Address.ts  INode.ts  User.ts  index.ts
src/lib/models/: Transaction.ts
src/lib/nextAuth/: adapter.ts  index.js
src/lib/relay-nextjs/: clientEnvironment.ts  serverEnvironment.ts
src/lib/server/relay-nextjs/: serverEnvironment.ts
src/lib/typeorm/: data-source.ts  index.ts
src/lib/typeorm/entity/: AccessCode.ts  Account.ts  Session.ts  User.ts  VerificationToken.ts
src/queries/__generated__/: relay_AccessCodeQuery.graphql.ts  test.graphql
src/schema/__generated__/: schema.graphql
src/scripts/: start-dev-environment.js
