[package]
name="aspiesolutions_core"
version="0.0.1"
edition="2018"

[dependencies]
const_format = "0.2.26"
serde = {version="1.0.140",features=["derive"]}
thiserror = "1.0.31"
alcoholic_jwt = {version="4091.0.0",optional=true}
reqwest = {version= "0.11.11",optional=true}
serde_json = {version="1.0.82",optional=true}
rocket = {version="0.5.0-rc.2",optional=true}