[package]
name="aspiesolutions_core"
version="0.0.1"
edition="2021"

[dependencies]
const_format = "0.2.26"
serde = {version="1.0.140",features=["derive"]}
thiserror = "1.0.31"
uuid = "1.1.2"
async-trait = "0.1.56"
log = "0.4.17"
tokio={version="1",features=["sync"]}
alcoholic_jwt = {version="4091.0.0",optional=true}
lazy_static = "1.4.0"
reqwest = {version= "0.11.11",features=["json"],optional=true}
serde_json = {version="1.0.82",optional=true}
rocket = {version="0.5.0-rc.2",optional=true}
sea-orm={version="0.9",optional=true}
[dev-dependencies]
dotenv="0.15.0"