[package]
name="lib-graphql"
version="0.0.2"
edition="2021"

[features]
enable_derive_debug=["aspiesolutions_core/enable_derive_debug"]

[[bin]]
name="output-schema"
path="./bin/output-schema.rs"

[dependencies]
serde_json="1.0"
lazy_static = "1.4.0"
sea-orm={version="0.9",features=["sqlx-postgres","runtime-tokio-native-tls"]}
entity={path="../entity"}
tokio={version="1",features=["full"]}
aspiesolutions_core={path="../aspiesolutions_core",features=["sea-orm"]}
log = "0.4.17"
[dependencies.serde]
version="1.0"
features=["derive"]
# neon-serde="0.4.0"

[dependencies.juniper]
version="0.15"
features=["serde_json"]

