[package]
name = "lib-neon-graphql"
version = "0.0.2"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
[dependencies.serde]
version="1.0"
features=["derive"]
# neon-serde="0.4.0"

[dependencies.juniper]
version="0.15"
features=["serde_json"]
[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
