[package]
name="rust-graphql-api"
version="0.0.1"
edition="2021"




[dependencies]
rocket = {version="0.5.0-rc.2",features=["json"],default-features=false}
lib-graphql={path="../lib-graphql"}
rust-lib-db-sea-orm={path="../rust-lib-db-sea-orm"}
rocket_db_pools = "0.1.0-rc.2"
sea-orm="0.9"
async-trait = "0.1"
serde = "1.0.140"
alcoholic_jwt = "4091.0.0"
reqwest = {version="0.11.11",features=["json"]}
anyhow = "1.0.58"
base64="0.13.0"
serde_json = "1.0"
entity={path="../entity"}
aspiesolutions_core={path="../aspiesolutions_core",features=["alcoholic_jwt","reqwest","serde_json","rocket"]}
dotenv = "0.15.0"
# migration={path="../migration"}
[dependencies.juniper_rocket]
version="0.8"
[dev-dependencies]
tokio={version="1.0",features=["full"]}
